--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -241,6 +241,12 @@ h6 {
     gap: 16px;
 }
 
+.loginForm h2 {
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
 .form-group {
     display: flex;
     flex-direction: column;
